# gettree

./: .gitignore  CONFIG_EXAMPLE.toml  IMPROVEMENTS.md  README.md  pyproject.toml  req.txt
gettree/: cli.py
