[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gettree"
dynamic = ["version"]
description = "Smart folder tree CLI with gitignore support"
authors = [{ name = "Ash Kernel" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "pathspec",
    "colorama",
    "rich"
]

[project.scripts]
gettree = "gettree.cli:main"

[tool.setuptools.packages.find]
include = ["gettree"]

[tool.setuptools.dynamic]
version = { attr = "gettree.__version__" }