[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gettree"
dynamic = ["version"]
description = "Fast modern CLI to visualize folder structures with filtering, sorting, and JSON/CSV/Markdown exports"
authors = [{ name = "Ash Kernel" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "typer>=0.9.0",
    "pathspec>=0.11.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "tomli>=1.2.0;python_version<'3.11'"
]

[project.scripts]
gettree = "gettree.cli:app"

[tool.setuptools.packages.find]
include = ["gettree"]

[tool.setuptools.dynamic]
version = { attr = "gettree.__version__" }